friends-list/styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
img {
  width: 100%;
  height: 100%;
  object-fit:fill;
}
/* header  */
.header {
  padding: 2.1625rem 2.3125rem 2.0625rem 2.3125rem;
  background-color: #371e63;
  color: #fff;
  font-family: "Google Sans Flex", sans-serif;
  font-size: 1.5rem;
  font-weight: 200;
}
/* wrapper  */
.wrapper {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  row-gap: 0.95rem;
  column-gap: 0.9375rem;
  overflow: scroll;
  height: 78.4vh;
  padding: 4.25rem 5.1875rem;
}
/* card  */
.card {
  display: flex;
  justify-content: start;
  align-items: center;
  flex: 0 0 calc(33.33% - 1.0625rem);
  column-gap: 1.5rem;
  min-height: 6.54rem;
  padding: 0.875rem;
  background-color: #5266af;
  .profile {
    overflow: hidden;
    width: 4.4375rem;
    height: 4.4375rem;
    border-radius: 50%;
  }
  .name {
    font-family: "Open Sans", sans-serif;
    font-size: 1.2rem;
    font-weight: 500;
    color: #fff;
  }
  .email {
    font-family: "Open Sans", sans-serif;
    font-weight: 100;
    font-size: 0.9rem;
    color: #e2e5f1;
  }
}
/* responsive layout  */
@media (max-width: 76.9375rem) {
  .card {
    flex: 0 0 calc(50% - 1.0625rem);
  }
}
@media (max-width: 51.8125rem) {
  .wrapper {
    padding: 1.875rem 1.25rem;
  }
  .card {
    flex: 1 1 100%;
  }
}

